--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_URL=http://127.0.0.1:5050
-#VITE_BASE_URL=https://www.telcomanager.cl
+#VITE_BASE_URL=http://127.0.0.1:5050
+VITE_BASE_URL=https://www.telcomanager.cl
 VITE_DOMINION_URL=https://www.dominion-telco.com
 
