--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BASE_URL=http://127.0.0.1:5050
+#VITE_BASE_URL=http://127.0.0.1:5050
 #"./static/sounds/alert.mp3"
-#VITE_BASE_URL=https://www.telcomanager.cl
+VITE_BASE_URL=https://www.telcomanager.cl
