--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-charts": "^7.19.0",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
+    "canvas-confetti": "^1.9.3",
     "powerbi-client-react": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
