--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "domform-app",
+  "name": "telcomanager",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,12 +19,10 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "canvas-confetti": "^1.9.3",
-    "powerbi-client-react": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.25.1",
-    "recharts": "^2.12.7"
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
