--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-#VITE_BASE_URL=http://127.0.0.1:5050
+VITE_BASE_URL=http://127.0.0.1:5050
 #"./static/sounds/alert.mp3"
-VITE_BASE_URL=https://www.telcomanager.cl
-
-##622534
+#VITE_BASE_URL=https://www.telcomanager.cl
