--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.12.2",
     "canvas-confetti": "^1.9.3",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
